[gd_scene load_steps=13 format=3 uid="uid://buhj3wwu1hkpm"]

[ext_resource type="Script" path="res://characters/player/Player.gd" id="1_2mefl"]
[ext_resource type="Script" path="res://statemachine/Statemachine.gd" id="2_5yos1"]
[ext_resource type="Script" path="res://characters/player/PlayerNormalState.gd" id="3_jj554"]
[ext_resource type="Script" path="res://characters/player/PlayerJumpState.gd" id="4_ux613"]
[ext_resource type="Script" path="res://characters/player/PlayerSinkState.gd" id="5_1vtjs"]
[ext_resource type="Script" path="res://characters/player/PlayerFallingState.gd" id="6_d4xsk"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p1f2q"]

[sub_resource type="CylinderMesh" id="CylinderMesh_fq615"]

[sub_resource type="SphereMesh" id="SphereMesh_45y8i"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5cf0m"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_itt2s"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fpk22"]
height = 0.354409

[node name="Player" type="CharacterBody3D" groups=["Entity", "Player"]]
collision_mask = 7
script = ExtResource("1_2mefl")

[node name="PlayerModel" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_p1f2q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerModel"]
transform = Transform3D(0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, -0.0460244, 0.135401, -0.521027)
mesh = SubResource("CylinderMesh_fq615")

[node name="SinkModel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.934778, 0)
visible = false
mesh = SubResource("SphereMesh_45y8i")
surface_material_override/0 = SubResource("StandardMaterial3D_5cf0m")

[node name="StandCollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_itt2s")

[node name="SinkCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.825548, 0)
visible = false
shape = SubResource("CylinderShape3D_fpk22")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_5yos1")
initial_state = NodePath("PlayerNormalState")

[node name="PlayerNormalState" type="Node" parent="StateMachine"]
script = ExtResource("3_jj554")

[node name="PlayerJumpState" type="Node" parent="StateMachine"]
script = ExtResource("4_ux613")

[node name="PlayerSinkState" type="Node" parent="StateMachine"]
script = ExtResource("5_1vtjs")

[node name="PlayerFallingState" type="Node" parent="StateMachine"]
script = ExtResource("6_d4xsk")
